kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: magneetar
  labels:
    app: magneetar
    environment: production
